[gd_scene load_steps=31 format=3 uid="uid://c4dyy4kax1ogv"]

[ext_resource type="Script" path="res://Scenes/DefaultUnit/StateUnit.gd" id="1_ft0sp"]
[ext_resource type="Texture2D" uid="uid://ompg3iyrakdd" path="res://Art/SkelyBoyParts.png" id="2_nu0w1"]
[ext_resource type="Shader" path="res://Scenes/DefaultUnit/hitEffect.gdshader" id="3_spybr"]
[ext_resource type="Texture2D" uid="uid://pt6ga01gn812" path="res://Art/SkelyBoyParts2x.png" id="4_lth50"]
[ext_resource type="Script" path="res://Scenes/DefaultUnit/States/StateMachine.gd" id="4_mbm05"]
[ext_resource type="Script" path="res://Scenes/DefaultUnit/States/EnemyFollow.gd" id="5_bf3th"]
[ext_resource type="Script" path="res://Scenes/DefaultUnit/States/EnemyIdle.gd" id="6_bjb5g"]
[ext_resource type="Script" path="res://Scenes/DefaultUnit/States/EnemyAttack.gd" id="7_o8q00"]
[ext_resource type="Script" path="res://Scenes/DefaultUnit/States/EnemyStun.gd" id="8_gqa3m"]
[ext_resource type="Script" path="res://Scenes/DefaultUnit/States/PlayerWalk.gd" id="9_cbxsc"]
[ext_resource type="Script" path="res://Scenes/DefaultUnit/States/EnemyDead.gd" id="11_73he8"]
[ext_resource type="Script" path="res://Scene/MouseOver.gd" id="11_a2yo4"]
[ext_resource type="Texture2D" uid="uid://bo1opgc28somc" path="res://Art/MousePointer1.png" id="13_tngif"]

[sub_resource type="Shader" id="Shader_2y081"]
code = "shader_type canvas_item;

uniform float flash_opacity = 0;
uniform vec4 flash_color : source_color = vec4(1.0,1.0,1.0,1.0);

void fragment() {
	vec4 tex_color = texture(TEXTURE, UV);
    vec3 blended_color = mix(tex_color.rgb, flash_color.rgb, flash_opacity); // Use only the RGB components for blending

	COLOR.rgb = blended_color;
	COLOR.a = tex_color.a;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nrtso"]
resource_local_to_scene = true
shader = SubResource("Shader_2y081")
shader_parameter/flash_opacity = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ykg6r"]
resource_local_to_scene = true
shader = ExtResource("3_spybr")
shader_parameter/flash_opacity = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pv03d"]
radius = 6.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5cwag"]
radius = 219.021

[sub_resource type="Animation" id="Animation_h2q2f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art/Body:material:shader_parameter/flash_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Art/Head:material:shader_parameter/flash_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_itt8p"]
resource_name = "Walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.123542, -0.152962]
}

[sub_resource type="Animation" id="Animation_ofoju"]
resource_name = "hitAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art/Body:material:shader_parameter/flash_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Art/Head:material:shader_parameter/flash_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4rt51"]
_data = {
"RESET": SubResource("Animation_h2q2f"),
"Walk": SubResource("Animation_itt8p"),
"hitAnimation": SubResource("Animation_ofoju")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qcve7"]
bg_color = Color(0.890196, 0, 0.105882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kmei"]
bg_color = Color(0, 0.760784, 0.235294, 1)
border_color = Color(0.180005, 0.180005, 0.180005, 1)

[sub_resource type="Animation" id="Animation_80goa"]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Art/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(0, -18), Vector2(0, -10), Vector2(0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Art/Head:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.57657, 3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Art/Body:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Art/DeadHead:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -13), Vector2(0, -18), Vector2(0, -11), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Art/DeadHead:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159]
}

[sub_resource type="Animation" id="Animation_psedn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Art/Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Art/Head:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Art/DeadHead:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Art/DeadHead:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_s08ro"]
resource_name = "Walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.139626, -0.139626]
}

[sub_resource type="Animation" id="Animation_5chxr"]
resource_name = "WalkFast"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Art:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.139626, -0.139626]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qn2uv"]
_data = {
"Die": SubResource("Animation_80goa"),
"RESET": SubResource("Animation_psedn"),
"Walk": SubResource("Animation_s08ro"),
"WalkFast": SubResource("Animation_5chxr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_541oc"]
size = Vector2(20, 27.6377)

[node name="BaseUnit" type="CharacterBody2D" groups=["unit"]]
script = ExtResource("1_ft0sp")

[node name="Selection" type="Sprite2D" parent="."]
position = Vector2(0, 10)
texture = ExtResource("2_nu0w1")
region_enabled = true
region_rect = Rect2(40, 49, 20, 13)

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 9)
texture = ExtResource("2_nu0w1")
region_enabled = true
region_rect = Rect2(43, 32, 12, 8)

[node name="Art" type="Node2D" parent="."]
position = Vector2(0, 3)

[node name="Body" type="Sprite2D" parent="Art"]
material = SubResource("ShaderMaterial_nrtso")
texture = ExtResource("2_nu0w1")
region_enabled = true
region_rect = Rect2(40, 16, 16, 12)

[node name="Head" type="Sprite2D" parent="Art"]
material = SubResource("ShaderMaterial_ykg6r")
position = Vector2(0, -14)
texture = ExtResource("2_nu0w1")
region_enabled = true
region_rect = Rect2(38, 0, 20, 16)

[node name="BlueHat" type="Sprite2D" parent="Art"]
visible = false
position = Vector2(0, -19)
texture = ExtResource("2_nu0w1")
region_enabled = true
region_rect = Rect2(7, 3, 18, 7)

[node name="RedHat" type="Sprite2D" parent="Art"]
visible = false
position = Vector2(0, -19)
texture = ExtResource("2_nu0w1")
region_enabled = true
region_rect = Rect2(7, 12, 18, 7)

[node name="DeadHead" type="Sprite2D" parent="Art"]
visible = false
position = Vector2(0, -13)
texture = ExtResource("4_lth50")
region_enabled = true
region_rect = Rect2(21, 3, 18, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_pv03d")

[node name="SM" type="Node" parent="." node_paths=PackedStringArray("initial_state", "own_body")]
script = ExtResource("4_mbm05")
initial_state = NodePath("Idle")
own_body = NodePath("..")

[node name="Follow" type="Node" parent="SM" node_paths=PackedStringArray("own_body")]
script = ExtResource("5_bf3th")
own_body = NodePath("../..")

[node name="Idle" type="Node" parent="SM" node_paths=PackedStringArray("own_body")]
script = ExtResource("6_bjb5g")
own_body = NodePath("../..")

[node name="Attack" type="Node" parent="SM" node_paths=PackedStringArray("own_body")]
script = ExtResource("7_o8q00")
own_body = NodePath("../..")

[node name="Stun" type="Node" parent="SM" node_paths=PackedStringArray("own_body")]
script = ExtResource("8_gqa3m")
own_body = NodePath("../..")

[node name="Walk" type="Node" parent="SM" node_paths=PackedStringArray("own_body")]
script = ExtResource("9_cbxsc")
own_body = NodePath("../..")
timeout = 8.0

[node name="Dead" type="Node" parent="SM" node_paths=PackedStringArray("own_body")]
script = ExtResource("11_73he8")
own_body = NodePath("../..")

[node name="SightRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightRange"]
shape = SubResource("CircleShape2D_5cwag")

[node name="EffectAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4rt51")
}
speed_scale = 2.0

[node name="UI" type="Node2D" parent="."]

[node name="HealthBar" type="ProgressBar" parent="UI"]
offset_left = -9.0
offset_top = -24.0
offset_right = -6.0
offset_bottom = -10.0
scale = Vector2(6.2, 0.160001)
theme_override_styles/background = SubResource("StyleBoxFlat_qcve7")
theme_override_styles/fill = SubResource("StyleBoxFlat_8kmei")
step = 1.0
value = 100.0
show_percentage = false

[node name="MovementAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qn2uv")
}
speed_scale = 2.0

[node name="ClickBox" type="Area2D" parent="."]
visible = false
monitorable = false
script = ExtResource("11_a2yo4")
mouse_over_cursor = ExtResource("13_tngif")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickBox"]
position = Vector2(0, -2)
rotation = -3.14159
scale = Vector2(0.872446, -1.08547)
shape = SubResource("RectangleShape2D_541oc")

[connection signal="AttackCommand" from="." to="SM" method="_on_base_unit_attack_command"]
[connection signal="Died" from="." to="SM" method="_on_base_unit_died"]
[connection signal="Hit" from="." to="SM" method="_on_unit_sm_hit"]
[connection signal="WalkCommand" from="." to="SM" method="_on_base_unit_walk_command"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="SightRange" to="SM" method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="SightRange" to="SM" method="_on_sight_range_body_exited"]
[connection signal="body_shape_entered" from="SightRange" to="SM" method="_on_sight_range_body_shape_entered"]
[connection signal="body_shape_exited" from="SightRange" to="SM" method="_on_sight_range_body_shape_exited"]
